# tatum

./: Cargo.toml  README.md
src/: main.rs  page_template.rs  render.rs  svg_template.rs
src/routes/: index.rs  mod.rs  watch.rs
templates/: page.html
